Support JDK11